--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/src/index.js"
+    "start": "node dist/src/index.js",
+    "format:write": "prettier --write \"src/**/*.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "@types/lodash": "^4.17.21",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "prettier": "^3.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
