--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.940.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -21,12 +22,14 @@
     "lodash": "^4.17.21",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "otplib": "^12.0.1",
     "rate-limiter-flexible": "^8.3.0",
     "uuid": "^13.0.0",
     "viem": "^2.40.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
