--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "format:write": "prettier --write \"src/**/*.ts\""
+    "format:write": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +31,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
@@ -36,7 +39,11 @@
     "@types/lodash": "^4.17.21",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
