--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "otplib": "^12.0.1",
     "rate-limiter-flexible": "^8.3.0",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0",
     "viem": "^2.40.3",
     "zod": "^4.1.13"
